--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: paus
+name: torchnew
 channels:
   - pytorch
   - nvidia
@@ -53,6 +53,7 @@ dependencies:
   - dask-core=2023.4.1=py38h06a4308_0
   - dav1d=1.2.1=h5eee18b_0
   - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.6.7=py38h6a678d5_0
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
@@ -82,7 +83,8 @@ dependencies:
   - importlib_metadata=6.0.0=hd3eb1b0_0
   - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2023.1.0=hdb19cb5_46305
-  - ipykernel=5.5.5=py38hd0cf306_0
+  - ipykernel=6.25.0=py38h2f386ee_0
+  - ipympl=0.9.3=pyhd8ed1ab_0
   - ipython=8.12.0=pyh41d4057_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=8.1.1=pyhd8ed1ab_0
@@ -181,6 +183,7 @@ dependencies:
   - nbconvert-core=7.9.2=pyhd8ed1ab_0
   - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.5.6=py38h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.1=py38h06a4308_0
   - notebook-shim=0.2.3=pyhd8ed1ab_0
@@ -191,7 +194,7 @@ dependencies:
   - numpy-base=1.24.3=py38h060ed82_1
   - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.11=h7f8727e_2
+  - openssl=3.0.12=h7f8727e_0
   - overrides=7.4.0=pyhd8ed1ab_0
   - packaging=23.1=py38h06a4308_0
   - pandas=2.0.3=py38h1128e8f_0
@@ -210,6 +213,7 @@ dependencies:
   - prometheus_client=0.17.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.39=pyha770c72_0
   - prompt_toolkit=3.0.39=hd8ed1ab_0
+  - psutil=5.9.0=py38h5eee18b_0
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd3eb1b0_0
@@ -290,4 +294,3 @@ dependencies:
   - zstd=1.5.5=hc292b87_0
   - pip:
       - opencv-python-headless==4.8.1.78
-prefix: /home/varun/miniconda3/envs/paus
